feat(#5): added Header & Footer + UI enhancement

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,44 +41,267 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --rgb-color-statuspage-green: var(--rgb-color-statuspage-green);
+  --rgb-color-statuspage-red: var(--rgb-color-statuspage-red);
+  --rgb-color-statuspage-blue: var(--rgb-color-statuspage-blue);
+  --rgb-color-statuspage-yellow: var(--rgb-color-statuspage-yellow);
+  --color-statuspage-green: rgb(var(--rgb-color-statuspage-green));
+  --color-statuspage-red: rgb(var(--rgb-color-statuspage-red));
+  --color-statuspage-blue: rgb(var(--rgb-color-statuspage-blue));
+  --color-statuspage-yellow: rgb(var(--rgb-color-statuspage-yellow));
+  --color-palette-greyscale-500: #a8a8a8;
+  --color-palette-greyscale-700: #6d6d6d;
+  --color-palette-yellow-500: #eb9500;
+  --color-palette-yellow-700: #986000;
+  --color-palette-teal-500: #09bcb3;
+  --color-palette-teal-700: #067a74;
+  --color-palette-blue-500: #9c9fff;
+  --color-palette-blue-700: #4e54ff;
+  --color-palette-purple-500: #d18bff;
+  --color-palette-purple-700: #a012ff;
+  --color-palette-orange-500: #f83;
+  --color-palette-orange-700: #b64c00;
+  --color-palette-green-500: #0fc073;
+  --color-palette-green-700: #0a7d4b;
+  --color-palette-red-500: #ff8572;
+  --color-palette-red-700: #d61d00;
+  --text-13: 0.8125rem;
+  --text-13--line-height: 160%;
+  --text-md: 1rem;
+  --text-dashboards-xs: 12px;
+  --text-dashboards-xs--line-height: 100%;
+  --text-dashboards-sm: 13px;
+  --text-dashboards-sm--line-height: 100%;
+  --text-dashboards-md: 14px;
+  --text-dashboards-md--line-height: 100%;
+  --text-dashboards-lg: 16px;
+  --text-dashboards-lg--line-height: 100%;
+  --text-statuspage-heading-large: 32px;
+  --text-statuspage-heading-large--line-height: 110%;
+  --text-statuspage-heading-medium: 28px;
+  --text-statuspage-heading-medium--line-height: 110%;
+  --text-statuspage-heading-small: 22px;
+  --text-statuspage-heading-small--line-height: 110%;
+  --text-statuspage-large: 15px;
+  --text-statuspage-large--line-height: 150%;
+  --text-statuspage-medium: 13px;
+  --text-statuspage-medium--line-height: 150%;
+  --text-statuspage-small: 12px;
+  --text-statuspage-small--line-height: 150%;
+  --text-app-display-large: 28px;
+  --text-app-display-large--line-height: 120%;
+  --text-app-heading: 16px;
+  --text-app-heading--line-height: 150%;
+  --text-app-resource-caption: 13px;
+  --text-app-resource-caption--line-height: 123%;
+  --text-app-small: 13px;
+  --text-app-small--line-height: 100%;
+  --text-app-caption: 12px;
+  --text-app-caption--line-height: 133%;
+  --text-heading-24: 1.5rem;
+  --text-heading-24--line-height: 120%;
+  --inherit: inherit;
+  --current: currentColor;
+  --transparent: transparent;
+  --black: #000;
+  --white: #fff;
 }
 
 :root {
-  --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
-  --input: oklch(0.922 0 0);
-  --ring: oklch(0.708 0 0);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: oklch(0.985 0 0);
-  --sidebar-foreground: oklch(0.145 0 0);
-  --sidebar-primary: oklch(0.205 0 0);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.97 0 0);
-  --sidebar-accent-foreground: oklch(0.205 0 0);
-  --sidebar-border: oklch(0.922 0 0);
-  --sidebar-ring: oklch(0.708 0 0);
+  --rgb-color-statuspage-green: 5, 150, 105;
+  --rgb-color-statuspage-red: 185, 28, 28;
+  --rgb-color-statuspage-blue: 3, 105, 161;
+  --rgb-color-statuspage-yellow: 217, 119, 6;
+  --color-green-100: oklch(0.962 0.044 156.743);
+  --color-green-500: oklch(0.723 0.219 149.579);
+  --color-green-600: oklch(0.627 0.194 149.214);
+  --color-indigo-500: oklch(0.585 0.233 277.117);
+  --color-gray-100: oklch(0.967 0.003 264.542);
+  --color-gray-200: oklch(0.928 0.006 264.531);
+  --color-gray-300: oklch(0.872 0.01 258.338);
+  --color-gray-500: oklch(0.551 0.027 264.364);
+  --color-gray-600: oklch(0.446 0.03 256.802);
+  --color-gray-700: oklch(0.373 0.034 259.733);
+  --color-gray-800: oklch(0.278 0.033 256.848);
+  --color-gray-900: oklch(0.21 0.034 264.665);
+  --color-neutral-50: #eaecf1;
+  --color-neutral-100: #b8bfd1;
+  --color-neutral-200: #939db8;
+  --color-neutral-300: #646e87;
+  --color-neutral-400: #4e576e;
+  --color-neutral-500: #3b4254;
+  --color-neutral-600: #2f3647;
+  --color-neutral-700: #293040;
+  --color-neutral-800: #222838;
+  --color-neutral-900: #121826;
+  --color-black: #000;
+  --color-white: #fff;
+  --spacing: 0.25rem;
+  --container-xs: 20rem;
+  --container-md: 28rem;
+  --container-lg: 32rem;
+  --container-xl: 36rem;
+  --container-2xl: 42rem;
+  --text-xs: 0.65rem;
+  --text-xs--line-height: calc(1 / 0.75);
+  --text-sm: 0.75rem;
+  --text-sm--line-height: calc(1.25 / 0.875);
+  --text-base: 0.875rem;
+  --text-base--line-height: 155%;
+  --text-lg: 1.125rem;
+  --text-lg--line-height: calc(1.75 / 1.125);
+  --text-xl: 1.25rem;
+  --text-xl--line-height: calc(1.75 / 1.25);
+  --font-weight-normal: 400;
+  --font-weight-medium: 500;
+  --font-weight-semibold: 600;
+  --font-weight-bold: 700;
+  --tracking-tight: -0.025em;
+  --leading-tight: 1.25;
+  --leading-snug: 1.375;
+  --leading-normal: 1.5;
+  --leading-loose: 2;
+  --radius-xs: 4px;
+  --radius-sm: 6px;
+  --radius-md: 8px;
+  --radius-lg: 12px;
+  --radius-xl: 16px;
+  --radius-full: 9999px;
+  --drop-shadow-xs: 0 1px 1px #0000000d;
+  --drop-shadow-md: 0 3px 3px #0000001f;
+  --ease-in: cubic-bezier(0.4, 0, 1, 1);
+  --ease-out: cubic-bezier(0, 0, 0.2, 1);
+  --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
+  --animate-spin: spin 1s linear infinite;
+  --animate-pulse: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  --blur-xs: 4px;
+  --blur-md: 12px;
+  --blur-2xl: 40px;
+  --blur-3xl: 64px;
+  --default-transition-duration: 0.15s;
+  --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --default-font-family: var(--font-sans);
+  --default-font-feature-settings: var(--font-sans--font-feature-settings);
+  --default-font-variation-settings: var(--font-sans--font-variation-settings);
+  --default-mono-font-family: var(--font-mono);
+  --default-mono-font-feature-settings: var(--font-mono--font-feature-settings);
+  --default-mono-font-variation-settings: var(
+    --font-mono--font-variation-settings
+  );
+  --radius: 8px;
+  --radius-none: 0;
+  --color-neutral-20: #f9fafb;
+  --color-neutral-30: #f8f9fc;
+  --color-neutral-40: #f4f5f8;
+  --color-neutral-60: #dfe3ea;
+  --color-neutral-70: #dfe3ea;
+  --color-neutral-80: #d5d9e3;
+  --color-neutral-90: #c6ccdb;
+  --color-neutral-850: #1f2433;
+  --color-brand-primary-70: #e3ebfd;
+  --color-brand-primary-80: #beccfb;
+  --color-brand-primary-90: #98a4f7;
+  --color-brand-primary-100: #7c87f7;
+  --color-brand-primary-200: #5b63d3;
+  --color-brand-primary-300: #4449a9;
+  --color-brand-primary-500: #23265c;
+  --color-brand-blue-90: #4bb9e8;
+  --color-brand-blue-200: #007bb1;
+  --color-brand-green-90: #64c28d;
+  --color-brand-green-100: #00af79;
+  --color-brand-green-200: #00885d;
+  --color-brand-yellow-80: #e9c899;
+  --color-brand-yellow-90: #dd9c51;
+  --color-brand-yellow-100: #d57b16;
+  --color-brand-yellow-200: #ad5721;
+  --color-brand-red-100: #e0687d;
+  --color-brand-red-200: #c03a5a;
+  --color-brand-red-300: #982542;
+  --color-brand-red-400: #6c1e30;
+  --color-brand-orange-90: #ec9070;
+  --color-brand-orange-100: #e56a4e;
+  --color-brand-orange-200: #c23e34;
+  --color-brand-violet-100: #a579e9;
+  --color-deprecated-primary-500: #858af7;
+  --color-deprecated-primary-600: #6c71f5;
+  --color-deprecated-primary-700: #5056ed;
+  --color-deprecated-primary-800: #3f44ba;
+  --color-deprecated-primary-900: #2e3187;
+  --color-statuspage-neutral-900: #0f121a;
+  --color-statuspage-neutral-800: #191c24;
+  --color-statuspage-neutral-700: #21242d;
+  --color-statuspage-neutral-600: #2d313c;
+  --color-statuspage-neutral-500: #424757;
+  --color-statuspage-neutral-400: #585e72;
+  --color-statuspage-neutral-300: #70778c;
+  --color-statuspage-neutral-200: #8a91a5;
+  --color-statuspage-neutral-100: #a7acbb;
+  --color-statuspage-neutral-80: #e2e4e9;
+  --color-statuspage-neutral-60: #eeeff2;
+  --color-statuspage-neutral-40: #f5f5f7;
+  --color-palette-greyscale-500: #a8a8a8;
+  --color-palette-greyscale-700: #6d6d6d;
+  --color-palette-yellow-500: #eb9500;
+  --color-palette-yellow-700: #986000;
+  --color-palette-teal-500: #09bcb3;
+  --color-palette-teal-700: #067a74;
+  --color-palette-blue-500: #9c9fff;
+  --color-palette-blue-700: #4e54ff;
+  --color-palette-purple-500: #d18bff;
+  --color-palette-purple-700: #a012ff;
+  --color-palette-orange-500: #f83;
+  --color-palette-orange-700: #b64c00;
+  --color-palette-green-500: #0fc073;
+  --color-palette-green-700: #0a7d4b;
+  --color-palette-red-500: #ff8572;
+  --color-palette-red-700: #d61d00;
+  --text-13: 0.8125rem;
+  --text-13--line-height: 160%;
+  --text-md: 1rem;
+  --text-dashboards-xs: 12px;
+  --text-dashboards-xs--line-height: 100%;
+  --text-dashboards-sm: 13px;
+  --text-dashboards-sm--line-height: 100%;
+  --text-dashboards-md: 14px;
+  --text-dashboards-md--line-height: 100%;
+  --text-dashboards-lg: 16px;
+  --text-dashboards-lg--line-height: 100%;
+  --text-statuspage-heading-large: 32px;
+  --text-statuspage-heading-large--line-height: 110%;
+  --text-statuspage-heading-medium: 28px;
+  --text-statuspage-heading-medium--line-height: 110%;
+  --text-statuspage-heading-small: 22px;
+  --text-statuspage-heading-small--line-height: 110%;
+  --text-statuspage-large: 15px;
+  --text-statuspage-large--line-height: 150%;
+  --text-statuspage-medium: 13px;
+  --text-statuspage-medium--line-height: 150%;
+  --text-statuspage-small: 12px;
+  --text-statuspage-small--line-height: 150%;
+  --text-app-display-large: 28px;
+  --text-app-display-large--line-height: 120%;
+  --text-app-heading: 16px;
+  --text-app-heading--line-height: 150%;
+  --text-app-resource-caption: 13px;
+  --text-app-resource-caption--line-height: 123%;
+  --text-app-small: 13px;
+  --text-app-small--line-height: 100%;
+  --text-app-caption: 12px;
+  --text-app-caption--line-height: 133%;
+  --text-heading-24: 1.5rem;
+  --text-heading-24--line-height: 120%;
+  --inherit: inherit;
+  --current: currentColor;
+  --transparent: transparent;
+  --black: #000;
+  --white: #fff;
 }
 
 .dark {
+  --rgb-color-statuspage-green: 16, 185, 129;
+  --rgb-color-statuspage-red: 248, 113, 113;
+  --rgb-color-statuspage-blue: 96, 165, 250;
+  --rgb-color-statuspage-yellow: 245, 158, 11;
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
@@ -119,4 +342,104 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.container {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 2rem;
+  padding-left: 2rem;
+}
+
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1500px;
+  }
+}
+
+@layer utilities {
+  .main-btn {
+    border-radius: 0.5rem;
+    --tw-bg-opacity: 1;
+    background-color: rgb(80 72 229 / var(--tw-bg-opacity));
+    font-weight: 500;
+    --tw-text-opacity: 1;
+    color: rgb(239 246 255 / var(--tw-text-opacity));
+  }
+
+  .bg-gray-100 {
+    background-color: var(--color-gray-100);
+  }
+
+  .bg-gray-200 {
+    background-color: var(--color-gray-200);
+  }
+
+  .bg-gray-300 {
+    background-color: var(--color-gray-300);
+  }
+
+  .bg-gray-800 {
+    background-color: var(--color-gray-800);
+  }
+}
+
+.transform-gpu {
+  transform: translate3d(var(--tw-translate-x), var(--tw-translate-y), 0)
+    rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
+    scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.text-statuspage-green {
+  color: var(--color-statuspage-green);
+}
+
+html,
+:host {
+  -webkit-text-size-adjust: 100%;
+  tab-size: 4;
+  line-height: 1.5;
+  font-family: var(
+    --default-font-family,
+    ui-sans-serif,
+    system-ui,
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol",
+    "Noto Color Emoji"
+  );
+  font-feature-settings: var(--default-font-feature-settings, normal);
+  font-variation-settings: var(--default-font-variation-settings, normal);
+  -webkit-tap-highlight-color: transparent;
+}
+
+abbr[title] {
+  -webkit-text-decoration: underline dotted;
+  text-decoration: underline dotted;
+}
+
+:where(select[multiple], select[size]) optgroup {
+  font-weight: bolder;
+}
+
+:where(select[multiple], select[size]) optgroup option {
+  padding-inline-start: 20px;
+}
+
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  appearance: button;
+}
+
+[hidden]:not([hidden="until-found"]) {
+  display: none !important;
+}
+
+button:not(:disabled),
+[role="button"]:not(:disabled) {
+  cursor: pointer;
 }
